--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <center>
 	<h1>Siwakorn Phetnoi</h1>
 	<hr>
-	<img src = "./assets/superhuman.JPG" style = "width: 200px; height: 300px;">
+	<img src = "./assets/TAB.png" style = "width: 200px; height: 300px;">
 </center>
 </body>
 </html>
