--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-<body>
-<center>
-	<h1>Siwakorn Phetnoi</h1>
-	<hr>
-	<img src = "./assets/TAB.png" style = "width: 200px; height: 300px;">
-</center>
-</body>
+    <head>
+        <link rel="stylesheet" href="myStyle.css">
+    </head>
+    <body class="floor">
+        <h1 class="topic">WELCOME TO MY WEBPAGE</h1>
+        <div class="mainContent">
+            <div class="contentBox">
+                <img src = "assets/me1.JPG" class="img">
+                <h1 class="contentFont">Siwakon Phetnoi</h1>
+                <p class="contentFont">Super very good student from KMITL...</p>
+            </div>
+        </div>
+    </body>
 </html>
