--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
         <h1 class="topic">WELCOME TO MY WEBPAGE</h1>
         <div class="mainContent">
             <div class="contentBox">
-                <img src = "assets/me1.JPG" class="img">
+                <img class="img">
                 <h1 class="contentFont">Siwakon Phetnoi</h1>
+                <h2 class="contentFont">62010882</h2>
                 <p class="contentFont">Super very good student from KMITL...</p>
             </div>
         </div>
