--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
                 <h1 class="contentFont">Siwakon Phetnoi</h1>
                 <h2 class="contentFont">62010882</h2>
                 <p class="contentFont">Super very good student from KMITL...</p>
+                <a href="https://www.facebook.com/siwakornpok/" class="facebook"></a>
+                <a href="https://www.instagram.com/bao.follow/" class="ig"></a>
             </div>
         </div>
     </body>
