--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="myStyle.css">
     </head>
     <body class="floor">
@@ -11,8 +12,9 @@
                 <h1 class="contentFont">Siwakon Phetnoi</h1>
                 <h2 class="contentFont">62010882</h2>
                 <p class="contentFont">Super very good student from KMITL...</p>
-                <a href="https://www.facebook.com/siwakornpok/" class="facebook"></a>
-                <a href="https://www.instagram.com/bao.follow/" class="ig"></a>
+                
+                <a href="https://www.facebook.com/siwakornpok/"><i class="fa fa-facebook-official" aria-hidden="true"></i></a> 
+                <a href="https://www.instagram.com/bao.follow/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             </div>
         </div>
     </body>
